# clion-rpi-pico-template

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: CMakeLists.txt
{{cookiecutter.project_slug}}/src/: CMakeLists.txt  main.cpp
